# hackods-educacion-datofilods

./: .gitignore  README.md  ai-log.md  correlations.md  main.py  pyproject.toml
dashboard/: HackODS.qmd  _quarto.yml  index.qmd
dashboard/HackODS_files/libs/bootstrap/: bootstrap-dark-9b953ad8be9e480b4d58e863411a52d5.min.css
dashboard/docs/: index.html
datos/: Educacion_06.csv  cuadro26A_rezago_educativo.csv  cuadro26F_carencia_alimentacion.csv  cuadro27_pobreza_porgrupo_etarios.csv  cuadro28_pobreza_porgrupo_etarios_parte2.csv  percepcion-inseguridad.csv  porcentajes.csv
docs/HackODS_files/libs/bootstrap/: bootstrap-dark-9753ade2c703cbf74be9b1e8cc84d5cb.min.css
docs/site_libs/bootstrap/: bootstrap-1be12c5bb8840d52e0fecce07e605730.min.css  bootstrap-4c37ceeee8e02fde1349cce7244fb6cd.min.css  bootstrap-dark-982a2366ae4e074115c0a6f4da07d393.min.css
notebooks/.ipynb_checkpoints/: mapa_escuelas_por_estado-checkpoint.ipynb
scripts/: graficas.py  graficas2.py  graficas3.py  limpieza.py  limpieza2.py  porcentajes_2.csv
