[project]
name = "hackods-educacion-datofilods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
